--- a/University of Virginia/ReadMe
+++ b/University of Virginia/ReadMe
@@ -1,3 +1,3 @@
-The University of Virginia scenery robot project can be foud at the following location:
+The University of Virginia scenery robot project can be found at the following location:
 https://github.com/rybitski/Scenery-Robot-V3
 
