--- a/Southern Illinois University/ReadMe
+++ b/Southern Illinois University/ReadMe
@@ -1,1 +1,2 @@
-Placeholder
+The Southern Illinois University Wireless Scenery Wagon (soon to be Robot) can be found at:
+https://github.com/tfagerholm/SIU-Scenery-Robot-V1/
